feat: npm run review error 현상 발생

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "webpack serve --mode development",
-    "review": "node tools/export-ui-review.mjs",
+    "review": "node tools/review.mjs",
     "build": "webpack --mode production"
   },
   "devDependencies": {
