--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "webpack-dev-server": "^4.15.2"
   },
   "dependencies": {
-    "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.3"
+    "html2canvas": "^1.4.1"
   }
 }
